# mini-temporal

./: Cargo.toml  README.md  docker-compose.yml
config/: dynamicconfig.yaml
src/: activity.rs  lib.rs  shared.rs  workflow.rs
static/: index.html
