[package]
name = "mini-temporal"
version = "0.1.0"
edition = "2021"

[lib]
name = "mini_temporal"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
# Temporal SDK
temporalio-sdk       = "0.4"
temporalio-client    = "0.4"
temporalio-common    = "0.4"
temporalio-macros    = "0.4"
temporalio-sdk-core  = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum          = "0.8"
tower-http    = { version = "0.6", features = ["fs"] }
http          = "1"

# Serialization
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

# Utilities
uuid          = { version = "1", features = ["v4"] }
anyhow        = "1"
url           = "2"
tonic         = "0.14"

# Required by temporalio proc-macros (generated code uses futures::FutureExt, etc.)
futures      = "0.3"
futures-util = "0.3"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
